2007-12-11  John W. Eaton  <jwe@octave.org>

	* plot/__plt2vs__.m, plot/__plt2sv__.m: New functions.
	* plot/__plt2__.m: Handle scalar-vector and vector-scalar cases.

2007-12-11  David Bateman  <dbateman@free.fr>

	* miscelleaneous/fullfile.m: Ignore empty arguments.

	* sparse/spstats.m: Drop argument to Fsparse to force mutation.
	* statistics/base/mode.m: Ditto.

	* plot/__plt_get_axis_arg__.m: Ignore integer valued handles as
	object handles are all now non integer.

2007-12-10  John W. Eaton  <jwe@octave.org>

	* plot/sombrero.m, plot/peaks.m: Use surf instead of mesh.

	* general/issymmetric.m: Use ' instead of .' for compatibility
	with previous versions of Octave.
	* general/ishermitian.m: Delete.
	* general/Makefile.in (SOURCES): Remove ishermitian.m from the list.

	* plot/fplot.m: In N is not specified, increase initial number of
	points from 3 and 5 to 5 and 8.

	* signal/detrend.m: Move tests here from test/test_signal.m.
	Loosen tolerance on first test from 10*eps to 20*eps.

	* finance/rate.m: Don't request info from fsolve.

2007-12-10  Michael Goffioul <michael.goffioul@gmail.com>

	* plot/__line__.m: Pass initial property/value pairs to __go_line__.
	* plot/surface.m: Pass initial property/value pairs to __go_surface__.

2007-12-10  David Bateman  <dbateman@free.fr>

	* image/image.m: Rewritten to allow trailing properties to be
	passed to underlying image object.
	* image/__img__.m: Pass additional arguments to __go_image__.
	* plot/__patch__.m: Don't set clim, rely on autoscaling.

2007-12-10  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: If we have a grid, send "set grid
	front" to gnuplot.

2007-12-10  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Issue "set view map" for pcolor, and "set
	border front" from images.
	* plot/__go_draw_figure__.m: Issue "set autoscale fix" for gnuplot.
	* plot/pcolor.m: Set axis "box" property.
	* plot/title.m, plot/xlabel.m, plot/ylabel.m, plot/xlabel.m:
	Mark as commands.
